add database and test user

--- a/helloASP/Web.config
+++ b/helloASP/Web.config
@@ -11,7 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-helloASP-20200215020216.mdf;Initial Catalog=aspnet-helloASP-20200215020216;Integrated Security=True"
+    <add name="DefaultConnection" 
+         connectionString="Data Source=petro123.mssql.somee.com;Initial Catalog=petro123;User ID=NatNat_SQLLogin_1;Password=j8flaz6rqz;MultiSubnetFailover=False"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
